--- a/css/style.css
+++ b/css/style.css
@@ -338,3 +338,40 @@ footer :nth-child(2){
     transform: scale(1.2);
     transition: 0.2s;
 }
+@media screen and (max-width: 576px) {
+    .header{
+        background-image: none;
+        background-color: black;
+    }
+    nav{
+        flex-direction: column;
+        display: block;
+    }
+    nav ul{
+        margin-bottom: 20px;
+    }
+    nav ul li{
+        list-style-type: none;
+        display: block;
+    }
+    nav ul li a{
+        font-size: 18px;
+        margin-bottom: 15px;
+    }
+    nav ul li:hover{
+        transform: scale(1.1);
+        transition-duration: 1s;
+    }
+    #content{
+        display: block;
+        position: relative;
+        top: 170px;
+        width: 100%;
+    }
+    .newsletter form{
+        width: 350px;
+    }
+    .newsletter form:hover{
+        transform: scale(1);
+    }
+}
