--- a/css/style.css
+++ b/css/style.css
@@ -338,6 +338,9 @@ footer :nth-child(2){
     transform: scale(1.2);
     transition: 0.2s;
 }
+.hide{
+    display: none;
+}
 @media screen and (max-width: 576px) {
     .header{
         background-image: none;
@@ -373,5 +376,23 @@ footer :nth-child(2){
     }
     .newsletter form:hover{
         transform: scale(1);
+    }
+    .abt-sec{
+        width: 100%;
+        flex-direction: column;
+    }
+    .abt-txt{
+        width: 100%;
+        text-align: center;
+        padding: 50px;
+    }
+    .titles h2{
+        width: 100%;
+    }
+    .box{
+        flex-direction: column;
+    }
+    .hire p{
+        width: 60%;
     }
 }
